# SSL-manage

./: README.md  pyproject.toml
backend/: .env  .env.example  README.md
backend/alembic/: env.py
backend/alembic/versions/: 00a459b39222_init.py
backend/src/ssl_manage/: __init__.py  main.py
backend/src/ssl_manage/api/: app.py  routes.py
backend/src/ssl_manage/api/endpoints/: auth.py  certificates.py  users.py
backend/src/ssl_manage/core/: config.py  security.py
backend/src/ssl_manage/db/: database.py
backend/src/ssl_manage/models/: certificate.py  user.py
backend/src/ssl_manage/schemas/: __init__.py  auth.py  certificate.py  user.py
backend/src/ssl_manage/services/: user.py
frontend/: .env.example  README.md  env.d.ts  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/components/: Layout.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts  auth.ts  certificate.ts
frontend/src/stores/: auth.ts  certificate.ts
frontend/src/types/: index.ts
frontend/src/views/: CertificateCreateView.vue  CertificateDetailView.vue  CertificateListView.vue  DashboardView.vue  LoginView.vue  RegisterView.vue
